--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,3 @@
-# Remove the `/arbor` prefix such that codecov.io can map the files
+# Remove the `/arbor-git` prefix such that codecov.io can map the files
 fixes:
-  - "/arbor/::"
+  - "/arbor-git/::"
